; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_htmlevent.c_call_disp_func.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_htmlevent.c_call_disp_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IID_IDispatchEx = common dso_local global i32 0, align 4
@DISPATCH_METHOD = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [43 x i8] c"Could not get IDispatchEx interface: %08x\0A\00", align 1
@IID_NULL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*)* @call_disp_func to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @call_disp_func(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %10 = call i32 @memset(i32* %8, i32 0, i32 4)
  %11 = load i32*, i32** %4, align 8
  %12 = bitcast i32** %7 to i8**
  %13 = call i32 @IDispatch_QueryInterface(i32* %11, i32* @IID_IDispatchEx, i8** %12)
  store i32 %13, i32* %9, align 4
  %14 = load i32, i32* %9, align 4
  %15 = call i64 @SUCCEEDED(i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %26

17:                                               ; preds = %3
  %18 = load i32*, i32** %7, align 8
  %19 = call i32 (...) @GetUserDefaultLCID()
  %20 = load i32, i32* @DISPATCH_METHOD, align 4
  %21 = load i32*, i32** %5, align 8
  %22 = load i32*, i32** %6, align 8
  %23 = call i32 @IDispatchEx_InvokeEx(i32* %18, i32 0, i32 %19, i32 %20, i32* %21, i32* %22, i32* %8, i32* null)
  store i32 %23, i32* %9, align 4
  %24 = load i32*, i32** %7, align 8
  %25 = call i32 @IDispatchEx_Release(i32* %24)
  br label %35

26:                                               ; preds = %3
  %27 = load i32, i32* %9, align 4
  %28 = call i32 @TRACE(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0), i32 %27)
  %29 = load i32*, i32** %4, align 8
  %30 = call i32 (...) @GetUserDefaultLCID()
  %31 = load i32, i32* @DISPATCH_METHOD, align 4
  %32 = load i32*, i32** %5, align 8
  %33 = load i32*, i32** %6, align 8
  %34 = call i32 @IDispatch_Invoke(i32* %29, i32 0, i32* @IID_NULL, i32 %30, i32 %31, i32* %32, i32* %33, i32* %8, i32* null)
  store i32 %34, i32* %9, align 4
  br label %35

35:                                               ; preds = %26, %17
  %36 = load i32, i32* %9, align 4
  ret i32 %36
}

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @IDispatch_QueryInterface(i32*, i32*, i8**) #1

declare dso_local i64 @SUCCEEDED(i32) #1

declare dso_local i32 @IDispatchEx_InvokeEx(i32*, i32, i32, i32, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @GetUserDefaultLCID(...) #1

declare dso_local i32 @IDispatchEx_Release(i32*) #1

declare dso_local i32 @TRACE(i8*, i32) #1

declare dso_local i32 @IDispatch_Invoke(i32*, i32, i32*, i32, i32, i32*, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
